--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Header
 menu:
   首页: /
-  友链: /links
-  关于: /about
+  友链: /
+  关于: /
 
 # 主页banner图
-banner: https://qiniu.sukoshi.xyz/src/images/68686407_p0.jpg
+banner: https://myc01.oss-cn-shanghai.aliyuncs.com/Assest/axis/axis_screenshot%20-%20max.png
 
 # 站点通知信息
-notice: flex-block主题部分重构，详情查看https://github.com/miiiku/flex-block
+notice: 个人主页维护升级中
 
 # 作者信息
 author:
-  name: Sukoshi
-  avatar: https://s.gravatar.com/avatar/2d6b803eea37de0257620d5fabee7e64?s=200&r=g&d=retro
-  description: 贵在坚持
+  name: 闵乐晟
+  avatar: https://myc01.oss-cn-shanghai.aliyuncs.com/Assest/info/wechat.jpg
+  description: 应当想象，西西弗斯是快乐的
 
 toc:
   max_depth: 3 # 生成 TOC 的最大深度
@@ -88,7 +88,7 @@ baidu_analytics:
 # 腾讯分析
 tencent_analytics: 
 # 站点ico
-favicon: /favicon.ico
+favicon: https://myc01.oss-cn-shanghai.aliyuncs.com/Assest/icon/orange.ico
 
 
 # Social Icon
@@ -98,5 +98,5 @@ social_icon:
     ins     :
     zhihu   :
     weibo   : 
-    github  : https://github.com/miiiku/
-    twitter : https://twitter.com/guanquanhong
+    github  : 
+    twitter : 
